# macmaint

./: .env.example  .gitignore  ASSISTANT_GUIDE.md  LICENSE  PHASE_2_SUMMARY.md  README.md  RELEASE_NOTES_v0.3.0.md  SPRINT_1_SUMMARY.md  SPRINT_2_SUMMARY.md  pyproject.toml  requirements.txt  setup.py
src/macmaint/: __init__.py  __main__.py  cli.py  config.py
src/macmaint/ai/: anonymizer.py  cleanup.py  client.py  prompts.py
src/macmaint/assistant/: __init__.py  agents.py  orchestrator.py  prompts.py  repl.py  session.py  tools.py
src/macmaint/core/: fixer.py  scanner.py
src/macmaint/models/: __init__.py  issue.py  metrics.py
src/macmaint/modules/: __init__.py  base.py  battery.py  cpu.py  disk.py  duplicates.py  memory.py  network.py  startup.py
src/macmaint/utils/: formatters.py  history.py  profile.py  safety.py  system.py  updater.py
tests/: conftest.py  test_agents.py  test_battery.py  test_duplicates.py  test_integration.py  test_session.py  test_tools.py  test_updater.py
